--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Gradient Background</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <script type="text/javascript" src="script.js" defer></script>
   </head>
-  <body id="gradient" onload="onLoadSet()">
+  <body id="gradient">
     <h1>Gradient Generator</h1>
-    <input class="color1" type="color" name="color1" value="#00ff00" />
-    <input class="color2" type="color" name="color2" value="#ff0000" />
+    <input class="color1" type="color" name="color1" value="#000000" />
+    <input class="color2" type="color" name="color2" value="#ffffff" />
     <br />
     <button onclick="randomColors()" id="random" type="button">Random</button>
     <h2>Current CSS Background</h2>
     <h3></h3>
-    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
